# yqpim

./: README.md
downloads/: ReadMe.txt  yq.txt  yqpim-0.8.0-1.i386.rpm  yqpim-0.8.0-1.src.rpm
source_codes/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  configure.ac  yqpim.desktop  yqpim.spec.in
source_codes/po/: ChangeLog  POTFILES.in  yqpim.pot  zh_CN.po
source_codes/src/: Makefile.am  clist.c  configfile.c  configfile.h  createfile.c  csv.c  dialog.c  list.c  main.c  menu.c  menufunc.c  misc.c  notebook.c  option.c  toolbar.c  toolbarfunc.c  treefunc.c  yqtree.c  yqtreeitem.c  yqtreeitem.h  yqtype.h
source_codes/src/pixmaps/: Makefile.am  add.xpm  boy.xpm  business.xpm  cancel.xpm  copy.xpm  cut.xpm  girl.xpm  home.xpm  laji.xpm  mima.xpm  name.xpm  new.xpm  notes.xpm  open.xpm  paste.xpm  personal.xpm  question.xpm  remove.xpm  rename.xpm  save.xpm  saveadd.xpm  search.xpm  up.xpm  yqfile.xpm  yqfile_close.xpm  yqfile_open.xpm  yqpim.xpm  zu.xpm  zu_close.xpm  zu_open.xpm
source_codes/src/wave/: Makefile.am
