SUBDIRS = pixmaps wave
AUTOMAKE_OPTIONS = no-dependencies

bin_PROGRAMS = yqpim
INCLUDES = -DLOCALEDIR=\"$(localedir)\"
yqpim_SOURCES = intl.h yqtype.h configfile.h configfile.c yqtreeitem.h yqtreeitem.c clist.c csv.c menu.c option.c yqtree.c dialog.c menufunc.c toolbar.c list.c misc.c toolbarfunc.c createfile.c main.c notebook.c treefunc.c
yqpim_LDADD = 
