EXTRA_DIST = \
	yqpim.xpm \
	cut.xpm \
	open.xpm \
	saveadd.xpm \
	yqfile_open.xpm \
	add.xpm \
	girl.xpm \
	paste.xpm \
	save.xpm \
	yqfile.xpm \
	boy.xpm \
	laji.xpm \
	question.xpm \
	search.xpm \
	zu_close.xpm \
	cancel.xpm \
	mima.xpm \
	remove.xpm \
	up.xpm \
	zu_open.xpm \
	copy.xpm \
	new.xpm \
	rename.xpm \
	yqfile_close.xpm \
	zu.xpm \
	name.xpm \
	home.xpm \
	business.xpm \
	personal.xpm \
	notes.xpm
